--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,105 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 0;
+  height: 100vh;
+  /* border-left: 0.4vw solid black;
+  border-right: 0.4vw solid black; */
+  background-color: #fffbe7;
+}
+body {
+  padding: 0;
+  margin: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.nav-items {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.3vw 2vw;
+  align-content: center;
+  background-color: #40dfef;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.nav-items h1 {
+  margin: auto 0;
+  font-size: 22px;
+  filter: drop-shadow(0.2vw 0.2vw 0vw white);
+}
+
+.nav-links {
+  display: flex;
+  gap: 2vw;
+  margin: 1.2vw 0;
+}
+
+.nav-links a {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  width: fit-content;
+  color: black;
+  padding: 0;
+}
+
+.nav-links a.active {
+  color: red;
+  border-bottom: 0.2vw solid red; /* Change this to the desired color */
+  /* Add any other styles you want for the active link */
+}
+
+.home-page {
+  display: flex;
+  justify-content: space-between;
+}
+
+.intro {
+  padding: 5%;
+  width: 50%;
+}
+.intro p {
+  font-size: 20px;
+  font-weight: 400;
+  text-align: justify;
+  line-height: 30px;
+  word-spacing: 10px;
+  padding: 4vw 0;
+}
+
+.Typewriter span {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.profile {
+  width: 50%;
+  padding: 5%;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.3vw 2vw;
+  background-color: #40dfef;
+  position: fixed;
+  bottom: 0;
+  width: 1280px;
+  box-sizing: border-box;
+  margin: auto;
+}
+
+.footer .link-buttons {
+  display: flex;
+  gap: 2vw;
+}
+
+.container {
+  height: 84%;
+}
+
+@media only screen and (max-width: 800px) {
+  .nav-links {
+    display: flex;
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
