--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #fffbe7;
+  background-color: #ededed;
+  color: #697184;
   box-sizing: border-box;
 }
 body {
@@ -14,17 +15,24 @@ body {
 }
 
 .nav-items {
-  position: relative;
   display: flex;
   justify-content: space-between;
   padding: 0.3vw 2vw;
   align-content: center;
-  background-color: #40dfef;
+  background-color: #ffffff;
+  border-bottom: 0.2vw solid #699e3c;
+  border-top: 0.2vw solid #699e3c;
+  width: 100%;
+  box-sizing: border-box;
+  position: fixed;
+  z-index: 99;
 }
 
 .nav-items h1 {
   font-size: 22px;
-  filter: drop-shadow(0.2vw 0.2vw 0vw white);
+  font-weight: 400;
+  color: #699e3c;
+  filter: drop-shadow(0.2vw 0.2vw 0vw rgb(255, 225, 0));
 }
 
 .nav-links {
@@ -44,9 +52,9 @@ body {
 .nav-links a {
   text-decoration: none;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 300;
   width: fit-content;
-  color: black;
+  color: #699e3c;
   padding: 0;
 }
 
@@ -58,18 +66,25 @@ body {
 
 .home-page {
   display: flex;
-  margin: auto;
+  margin: auto auto;
+  position: relative;
 }
 
 .intro {
+  display: flex;
+  flex-direction: column;
   padding: 5%;
   width: 50%;
+  justify-content: center;
+  box-sizing: border-box;
 }
 
 .intro h1 {
   margin: 0;
   font-size: 45px;
-  filter: drop-shadow(4px 4px 0px rgb(0, 247, 255));
+  color: black;
+  font-weight: 500;
+  filter: drop-shadow(3px 3px 0px #53ba17);
 }
 .intro p {
   font-size: 25px;
@@ -77,13 +92,15 @@ body {
   text-align: justify;
   line-height: 30px;
   word-spacing: 10px;
-  padding: 4vw 0;
+  padding: 2vw 0;
+  margin: 0;
 }
 
 .Typewriter span {
   font-size: 35px;
-  font-weight: 600;
-  filter: drop-shadow(3px 3px 0px red);
+  font-weight: 400;
+  color: rgb(40, 41, 42);
+  filter: drop-shadow(2px 2px 0px red);
 }
 
 .profile {
@@ -106,13 +123,35 @@ body {
 .profile .carousel-root .carousel .thumbs-wrapper {
   display: none;
 }
+
+.intro .next-button {
+  margin: auto;
+  width: 100%;
+}
+
+.intro .next-button button {
+  padding: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  border: 0.2vw solid #699e3c;
+  color: #699e3c;
+  border-radius: 2vw;
+  width: 100%;
+  background-color: #fff;
+}
+
 .footer {
   display: flex;
   justify-content: space-between;
   padding: 0.3vw 2vw;
-  background-color: #40dfef;
+  background-color: #fff;
+  border-top: 0.2vw solid #699e3c;
+  border-bottom: 0.2vw solid #699e3c;
   width: 100%;
   box-sizing: border-box;
+  position: fixed;
+  bottom: 0;
+  z-index: 99;
 }
 
 .footer .link-buttons {
@@ -125,18 +164,36 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
+  .nav-items {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .mobile-menu {
     display: flex;
     flex-direction: column;
-    padding-top: 3vw;
+    padding: 3vw 0 2vw 0;
   }
 
   .mobile-menu a {
     text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 300;
     width: fit-content;
-    color: black;
+    color: #699e3c;
+    padding: 1vw;
+    margin: auto;
+  }
+
+  .mobile-menu a.active {
+    color: red;
+    border-bottom: 0.2vw solid red; /* Change this to the desired color */
+    /* Add any other styles you want for the active link */
+  }
+
+  .nav-items h1 {
+    margin: auto 2vw;
+    font-size: 4vw;
   }
 
   .nav-links {
@@ -145,12 +202,66 @@ body {
 
   .menu-icon {
     display: block;
-    width: 34px;
+    width: 4vw;
   }
 
   .cross-icon {
     width: 20px;
     height: 20px;
     padding: 2vw;
+  }
+
+  .home-page {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin: auto;
+    position: relative;
+  }
+
+  .intro {
+    padding: 5%;
+    width: 80%;
+  }
+
+  .intro h1 {
+    margin: 0;
+    font-size: 35px;
+    color: black;
+    font-weight: 500;
+    filter: drop-shadow(3px 3px 0px #53ba17);
+    text-align: center;
+  }
+  .intro p {
+    font-size: 18px;
+    font-weight: 300;
+    text-align: justify;
+    line-height: 30px;
+    word-spacing: 10px;
+    padding: 4vw 0;
+  }
+
+  .Typewriter {
+    text-align: center;
+  }
+
+  .Typewriter span {
+    font-size: 25px;
+    font-weight: 400;
+    color: rgb(40, 41, 42);
+    filter: drop-shadow(2px 2px 0px red);
+  }
+
+  .profile {
+    width: 60%;
+    padding: 5vw 0 0 0;
+    display: flex;
+    place-items: center;
+  }
+
+  .profile .carousel-img {
+    width: 100% !important;
+    border-radius: 20px;
+    margin: auto;
   }
 }
