--- a/src/App.css
+++ b/src/App.css
@@ -157,8 +157,28 @@ body {
   background-color: #fff;
 }
 
-.container h1 {
+.skill-container {
+  z-index: 3;
+  width: 100%;
+  box-sizing: border-box;
+  margin: auto;
+  padding: 0 2vw;
+}
+
+.skill-container h1 {
   color: #000;
+  padding: 0 3vw;
+  font-size: 30px;
+  font-weight: 500;
+  margin: 0;
+}
+.skill-container .tools {
+  display: flex;
+  gap: 4vw;
+  margin: -1vw auto 0 auto;
+  font-size: 3vw;
+  padding: 1vw 0 0 3vw;
+  justify-content: start;
 }
 
 .skill {
@@ -166,31 +186,74 @@ body {
   box-sizing: border-box;
   width: 100%;
   display: flex;
+  margin: auto;
 }
 
 .skill-1 {
   width: 50%;
   padding: 1vw 3vw;
   box-sizing: border-box;
+  margin: auto 0;
 }
 
-.skill-1 h2 {
+.skill-1 .icon-container {
+  display: flex;
+  gap: 1vw;
+  padding: 1vw;
+}
+
+.skill-1 .icon-container svg {
+  font-size: 30px;
+}
+
+.skill-1 .icon-container h2 {
   color: #000;
-  margin: 0;
+  margin: auto 0vw;
+  font-size: 20px;
+  font-weight: 300;
 }
 
 .skill-shell {
   /* border: 0.1vw solid black; */
-  width: 80%;
+  width: 90%;
   border-radius: 2vw;
   background-color: #b2b2b2;
+  margin-bottom: 1vw;
 }
 
 .skill-shell .skill-fill {
   width: 50%;
-  height: 1.5vw;
-  background-color: darkblue;
+  height: 1.2vw;
+  background-color: rgb(0, 0, 0);
   border-radius: 2vw;
+}
+
+.skill-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  aspect-ratio: 1;
+  gap: 0.3vw 2vw;
+  width: 30%;
+  margin: 0 auto;
+}
+
+.skill-2 .mern-skill {
+  background-color: #fff;
+  border-radius: 1vw;
+  padding: 1vw;
+  width: 13vw;
+  height: 13vw;
+  margin: auto;
+  box-sizing: border-box;
+  align-items: center;
+}
+
+.mern-skill img {
+  width: 100%;
+  aspect-ratio: 1;
+  padding: 1vw;
+  box-sizing: border-box;
 }
 
 .footer {
@@ -232,14 +295,6 @@ body {
   padding: 0.8vw;
   margin-right: 2vw;
   color: black;
-}
-
-.container {
-  height: 100%;
-  z-index: 3;
-  width: 100%;
-  box-sizing: border-box;
-  margin: auto;
 }
 
 @media only screen and (max-width: 1000px) {
