--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   padding: 0;
   min-height: 100vh;
   display: flex;
-
+  flex-direction: column;
   background-color: #000000;
   color: white;
   box-sizing: border-box;
@@ -24,7 +24,7 @@ body {
   width: 100%;
   box-sizing: border-box;
   position: fixed;
-  z-index: 99;
+  z-index: 9;
 }
 
 .nav-clipart {
@@ -162,7 +162,6 @@ body {
   width: 100%;
   box-sizing: border-box;
   margin: auto;
-  padding: 0 2vw;
 }
 
 .skill-container h1 {
@@ -179,6 +178,10 @@ body {
   font-size: 3vw;
   padding: 1vw 0 0 3vw;
   justify-content: start;
+}
+
+.skill-container .tools img {
+  width: 3vw;
 }
 
 .skill {
@@ -298,11 +301,24 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
-  .nav-items {
+  /* .nav-items {
     display: flex;
     justify-content: space-between;
-    background-color: #000;
+    background-color: transparent;
     filter: none;
+  } */
+
+  .mobile-items {
+    background-color: #000;
+    display: flex;
+    justify-content: space-between;
+    filter: none;
+    padding: 0.3vw 2vw;
+    align-content: center;
+    width: 100%;
+    box-sizing: border-box;
+    position: fixed;
+    z-index: 9;
   }
 
   .mobile-menu {
@@ -320,7 +336,6 @@ body {
     color: lightblue;
     padding: 1vw;
     margin: auto;
-    z-index: 3;
   }
 
   .mobile-menu a.active {
@@ -369,17 +384,16 @@ body {
   }
 
   .intro {
-    padding: 20% 5% 5% 5%;
+    padding: 5% 5% 5% 5%;
     width: 100%;
-    margin-top: -15%;
-    clip-path: polygon(0 0, 100% 15%, 100% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     height: fit-content;
     background-color: #fff;
   }
 
   .intro h1 {
     margin: 0;
-    font-size: 35px;
+    font-size: 30px;
     color: black;
     font-weight: 500;
     filter: drop-shadow(3px 3px 0px #53ba17);
@@ -387,7 +401,7 @@ body {
     z-index: 2;
   }
   .intro p {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 300;
     text-align: justify;
     line-height: 30px;
@@ -403,7 +417,7 @@ body {
   }
 
   .Typewriter span {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 400;
     color: rgb(40, 41, 42);
     filter: drop-shadow(2px 2px 0px red);
@@ -411,16 +425,70 @@ body {
   }
 
   .profile {
-    width: 60%;
-    padding: 5vw 0 0 0;
-    display: flex;
-    place-items: center;
+    width: 100%;
+    position: relative;
+    height: fit-content;
+    padding: 20%;
+    box-sizing: border-box;
   }
 
-  .profile .carousel-img {
-    width: 100% !important;
-    border-radius: 20px;
+  .skill-container {
+    padding: 10vw 0;
+    margin: 2vw 0;
+  }
+
+  .skill-container h1 {
+    color: #fff;
+    font-size: 5vw;
+    font-weight: 400;
+    text-align: center;
+    padding: 3vw 0;
+  }
+
+  .skill {
+    flex-direction: column;
+    justify-content: center;
+    padding: 3vw 0;
+  }
+
+  .skill-1 {
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #fff;
+    clip-path: polygon(0 10%, 100% 0, 100% 90%, 0% 100%);
+    padding: 16vw 8vw;
+  }
+
+  .skill-2 {
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    gap: 1vw 2vw;
     margin: auto;
+    padding: 6vw 0;
+  }
+
+  .skill-2 .mern-skill {
+    padding: 1vw;
+    width: 18vw;
+    height: 18vw;
+    margin: auto;
+    box-sizing: border-box;
+    align-items: center;
+  }
+
+  .skill-container .tools {
+    background-color: #fff;
+    width: 100%;
+    margin: 0;
+    box-sizing: border-box;
+    padding: 20vw 0 10vw 3vw;
+    font-size: 8vw;
+    gap: 5vw;
+    clip-path: polygon(0 35%, 100% 0, 100% 100%, 0% 100%);
+  }
+
+  .skill-container .tools img {
+    width: 6vw;
   }
 
   .footer {
