--- a/src/components/cube.scss
+++ b/src/components/cube.scss
@@ -2,7 +2,7 @@
   width: 50%;
   height: 100%;
   top: 0;
-  padding: 4% 3%;
+  padding: 6% 3%;
   position: absolute;
   right: 0;
 }
@@ -75,56 +75,56 @@
 
 @media only screen and (max-width: 1000px) {
   .cubespinner {
-    animation-name: spincube;
+    // animation-name: spincube;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-duration: 9s;
     transform-style: preserve-3d;
-    transform-origin: 11vw 11vw 0;
-    margin: 13% 40%;
+    transform-origin: 75px 75px 0;
     div {
-      position: absolute;
-      width: 18vw;
-      height: 18vw;
+      position: fixed;
+      width: 150px;
+      height: 150px;
       border: 1px solid #ff0000;
       background-color: rgba(3, 69, 76, 0.4);
       text-align: center;
-      font-size: 10vw;
+      font-size: 35px;
       display: flex;
       justify-content: center;
       align-items: center;
     }
     .face1 {
-      transform: translateZ(9vw);
+      transform: translateZ(75px);
       color: #dd0031;
     }
     .face2 {
-      transform: rotateY(90deg) translateZ(9vw);
+      transform: rotateY(90deg) translateZ(75px);
       color: #f06529;
     }
     .face3 {
-      transform: rotateY(90deg) rotateX(90deg) translateZ(9vw);
+      transform: rotateY(90deg) rotateX(90deg) translateZ(75px);
       color: #28a4d9;
     }
     .face4 {
-      transform: rotateY(180deg) rotateZ(90deg) translateZ(9vw);
+      transform: rotateY(180deg) rotateZ(90deg) translateZ(75px);
       color: #5ed4f4;
     }
     .face5 {
-      transform: rotateY(-90deg) rotateZ(90deg) translateZ(9vw);
+      transform: rotateY(-90deg) rotateZ(90deg) translateZ(75px);
       color: #efd81d;
     }
     .face6 {
-      transform: rotateX(-90deg) translateZ(9vw);
+      transform: rotateX(-90deg) translateZ(75px);
       color: #ec4d28;
     }
   }
 
   .stage-cube-cont {
-    width: 100%;
-    top: 0;
-    position: absolute;
-    right: 0;
     box-sizing: border-box;
+    width: fit-content;
+    height: 100%;
+    margin-right: calc(50% - 45px);
+    margin-top: auto;
+    z-index: 999;
   }
 }
