--- a/src/App.css
+++ b/src/App.css
@@ -126,9 +126,8 @@ body {
   margin: auto;
 }
 
-.profile .carousel-img {
-  width: 100% !important;
-  border-radius: 10px;
+.carousel-img {
+  width: 70% !important;
   margin: auto;
   z-index: 2;
 }
@@ -141,7 +140,7 @@ body {
   display: none;
 }
 
-.profile .carousel-root .carousel .thumbs-wrapper {
+.carousel-root .carousel .thumbs-wrapper {
   display: none;
 }
 
@@ -266,52 +265,70 @@ body {
 .projects {
   z-index: 3;
   box-sizing: border-box;
-  width: 90%;
+  width: 100%;
   margin: auto;
 }
 
-.card-box {
+.project-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin: auto;
-  gap: 4vw;
   width: 100%;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(18, 18, 18, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(5px);
+  color: #000;
+  box-sizing: border-box;
+}
+
+.overlay-content {
+  padding: 2vw;
+  text-align: center;
+  margin: auto;
+  box-sizing: border-box;
+}
+
+.overlay-content img {
+  width: 80%;
+  margin: auto;
+}
+
+.overlay-content button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .card-overview {
   text-align: center;
-  background-color: lightgrey;
-  padding: 2vw;
   width: 100%;
   box-sizing: border-box;
-  clip-path: inset(0 0 0 0 round 5% 20% 0 10%);
+  background-color: rgba(3, 69, 76, 0.4);
+  border: 0.1vw solid red;
 }
 
 .card-overview img {
   width: 100%;
   margin: auto;
-  aspect-ratio: 4/3;
-  clip-path: inset(0 0 0 0 round 5% 20% 0 10%);
 }
 
 .project-card img {
   width: 100%;
   margin: auto;
   aspect-ratio: 4/3;
-  clip-path: inset(0 0 0 0 round 5% 20% 0 10%);
-}
-
-.card-overview p {
-  margin: -16% auto auto auto;
-  width: 100%;
-  position: relative;
-  background-color: #000;
-  border-bottom-left-radius: 2vw;
-  color: #fff;
-  font-size: 1vw;
-  padding: 1vw;
-  box-sizing: border-box;
-  opacity: 0.5;
 }
 
 .footer {
