--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,11 @@ body {
   z-index: 9;
 }
 
-.nav-clipart {
+.clipart {
   width: 60%;
   height: 100vh;
   background-color: #fff;
-  clip-path: polygon(0 0, 61% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 0, 60% 0, 100% 100%, 0 100%);
   position: absolute;
   z-index: 2;
 }
@@ -127,9 +127,12 @@ body {
 }
 
 .carousel-img {
-  width: 70% !important;
+  width: 60% !important;
   margin: auto;
   z-index: 2;
+}
+.carousel .carousel-status {
+  display: none;
 }
 
 .profile p {
@@ -264,54 +267,97 @@ body {
 
 .projects {
   z-index: 3;
+  padding: 5% 0;
   box-sizing: border-box;
   width: 100%;
   margin: auto;
+  color: #000;
+}
+
+.project-clipart {
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  clip-path: polygon(0 0%, 100% 10%, 100% 100%, 0 90%);
+  position: absolute;
+  z-index: 2;
+}
+
+.projects h1 {
+  margin: 0;
+  font-size: 2.5vw;
+  font-weight: 500;
+  padding-left: 10vw;
+}
+
+.projects h6 {
+  font-size: 1.2vw;
+  padding: 0 0 2vw 10vw;
 }
 
 .project-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin: auto;
-  width: 100%;
+  width: 80%;
+  gap: 2vw;
+  box-sizing: border-box;
 }
 
 .overlay {
   position: fixed;
+  padding: 4vw;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background: rgba(18, 18, 18, 0.5);
+  background: rgba(63, 62, 62, 0.722);
   display: flex;
-  align-items: center;
-  justify-content: center;
-  backdrop-filter: blur(5px);
-  color: #000;
+  flex-direction: column;
+  justify-content: space-evenly;
+  backdrop-filter: blur(10px);
+  color: #000000d9;
   box-sizing: border-box;
+  align-items: center;
 }
 
 .overlay-content {
-  padding: 2vw;
   text-align: center;
-  margin: auto;
   box-sizing: border-box;
 }
 
-.overlay-content img {
+.overlay-content p {
+  text-align: center;
+  font-size: 1.4vw;
   width: 80%;
   margin: auto;
+  padding: 1vw;
+  color: #fff;
 }
 
-.overlay-content button {
+.project-buttons {
+  margin: 1vw;
+  display: flex;
+  justify-content: center;
+  gap: 1vw;
+}
+
+.project-buttons button {
   background-color: #4caf50;
   color: white;
-  padding: 10px;
+  width: 10vw;
+  padding: 1vw;
+  font-size: 1.2vw;
+  font-weight: 900;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.5vw;
   cursor: pointer;
 }
 
+.main-card {
+  width: 100%;
+  margin: auto;
+}
 .card-overview {
   text-align: center;
   width: 100%;
@@ -325,10 +371,10 @@ body {
   margin: auto;
 }
 
-.project-card img {
-  width: 100%;
-  margin: auto;
-  aspect-ratio: 4/3;
+.projects .card-overview h2 {
+  margin: 0;
+  font-size: 1.6vw;
+  font-weight: 300;
 }
 
 .footer {
