--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
 :root {
-  font-family: "Pridi", serif;
-
   color: rgba(0, 0, 0, 0.87);
   background-color: #7d7a7a;
-
+  font-family: "Nunito Sans", sans-serif;
   font-synthesis: none;
 
   text-rendering: optimizeLegibility;
