--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #000000;
+  background-color: #676666;
   color: white;
   box-sizing: border-box;
 }
@@ -27,14 +27,14 @@ body {
   z-index: 9;
 }
 
-.clipart {
+/* .clipart {
   width: 60%;
   height: 100vh;
   background-color: #fff;
   clip-path: polygon(0 0, 60% 0, 100% 100%, 0 100%);
-  position: absolute;
-  z-index: 2;
-}
+  /* position: absolute; */
+/* z-index: 2;
+} */
 
 .nav-items h1 {
   font-size: 22px;
@@ -79,9 +79,12 @@ body {
 .home-page {
   display: flex;
   margin: auto;
+  height: 100vh;
   justify-content: space-between;
   position: relative;
-  /* box-shadow: 0 0.1vw 10vw red; */
+  box-sizing: border-box;
+  background-color: #eceaea;
+  clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 90%);
 }
 
 .intro {
@@ -92,17 +95,18 @@ body {
   justify-content: center;
   box-sizing: border-box;
   z-index: 2;
+  margin: auto;
 }
 
 .intro h1 {
   margin: 0;
-  font-size: 38px;
+  font-size: 45px;
   color: darkblue;
   font-weight: 400;
   filter: drop-shadow(3px 2px 2px red);
 }
 .intro p {
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 300;
   text-align: left;
   word-spacing: 5px;
@@ -111,7 +115,7 @@ body {
 }
 
 .Typewriter span {
-  font-size: 28px;
+  font-size: 35px;
   font-weight: 300;
   color: darkblue;
   filter: drop-shadow(3px 2px 2px red);
@@ -164,26 +168,31 @@ body {
 }
 
 .skill-container {
-  z-index: 3;
-  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
-  margin: auto;
+  clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 90%);
+  background: #eceaea;
+  padding: 10%;
 }
 
 .skill-container h1 {
   color: #000;
-  padding: 0 3vw;
+  padding: 3vw;
   font-size: 30px;
   font-weight: 500;
-  margin: 0;
+  text-align: center;
 }
 .skill-container .tools {
   display: flex;
   gap: 4vw;
-  margin: -1vw auto 0 auto;
+  margin: auto;
   font-size: 3vw;
-  padding: 1vw 0 0 3vw;
-  justify-content: start;
+  padding: 3vw;
+  justify-content: center;
 }
 
 .skill-container .tools img {
@@ -191,18 +200,19 @@ body {
 }
 
 .skill {
-  padding: 0vw;
   box-sizing: border-box;
   width: 100%;
   display: flex;
+  justify-content: space-evenly;
+  gap: 2vw;
   margin: auto;
+  align-items: center;
 }
 
 .skill-1 {
   width: 50%;
-  padding: 1vw 3vw;
+  margin: auto;
   box-sizing: border-box;
-  margin: auto 0;
 }
 
 .skill-1 .icon-container {
@@ -241,19 +251,19 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
+  place-items: center;
   aspect-ratio: 1;
-  gap: 0.3vw 2vw;
-  width: 30%;
-  margin: 0 auto;
+  gap: 0vw;
+  width: 40%;
+  margin: auto;
 }
 
 .skill-2 .mern-skill {
-  background-color: #fff;
+  /* background-color: #fff; */
   border-radius: 1vw;
-  padding: 1vw;
-  width: 13vw;
-  height: 13vw;
-  margin: auto;
+  border: 0.2vw solid black;
+  padding: 2vw;
+  width: 70%;
   box-sizing: border-box;
   align-items: center;
 }
@@ -267,24 +277,22 @@ body {
 
 .projects {
   z-index: 3;
-  padding: 5% 0;
+  padding: 10% 0;
   box-sizing: border-box;
   width: 100%;
+  height: 100vh;
   margin: auto;
   color: #000;
-}
-
-.project-clipart {
-  width: 100%;
-  height: 100vh;
   background-color: #fff;
   clip-path: polygon(0 0%, 100% 10%, 100% 100%, 0 90%);
-  position: absolute;
-  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .projects h1 {
-  margin: 0;
   font-size: 2.5vw;
   font-weight: 500;
   padding-left: 10vw;
@@ -293,7 +301,6 @@ body {
 .projects h6 {
   font-size: 1.5vw;
   padding: 1.5vw 0;
-  margin: auto;
   font-weight: 300;
   text-align: justify;
   width: 80%;
