--- a/src/components/cube.scss
+++ b/src/components/cube.scss
@@ -1,7 +1,7 @@
 .stage-cube-cont {
   width: 50%;
   height: 100%;
-  top: 0;
+  top: calc(50% - 15vw);
   padding: 6% 3%;
   position: absolute;
   right: 0;
